fix: changing links

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Nёrds</title>
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="./favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-  <link href="normalize.css" rel="stylesheet">
-  <link href="/css/style.css" rel="stylesheet">
+  <link href="./normalize.css" rel="stylesheet">
+  <link href="./css/style.css" rel="stylesheet">
 </head>
 <body class="page-body">
   <header class="main-header"><!--фон-->
@@ -14,15 +14,15 @@
     <div class="main-header-wrapper">
       <nav class="main-navigation"><!--контейнер по ширене header-->
         <div class="header-logo">
-          <a class="header-logo-img" href="index.html">
-            <img src="\img\nerds-logo.svg" width="159,87" height="65,02" alt="Нердс">
+          <a class="header-logo-img" href="./index.html">
+            <img src="./img/nerds-logo.svg" width="159,87" height="65,02" alt="Нердс">
           </a>
         </div>  
         <div class="site-navigation">
           <ul class="site-navigation-list">
             <li class="site-navigation-item"><a href="#">Студия</a></li>
             <li class="site-navigation-item"><a href="#clients">Клиенты</a></li>
-            <li class="site-navigation-item"><a href="catalog.html">Магазин</a></li>
+            <li class="site-navigation-item"><a href="./catalog.html">Магазин</a></li>
             <li class="site-navigation-item"><a href="#contacts">Контакты</a></li>            
           </ul>
           </div>
@@ -72,7 +72,7 @@
             <li class="services-item">
               <h3 class="services-title">Веб-сайты</h3>
               <div class="services-img">
-                <img src="img\service-1.png" width="300" height="146" alt="Веб-сайты">
+                <img src="./img/service-1.png" width="300" height="146" alt="Веб-сайты">
               </div>
               <p class="services-item-phrase">Мир никогда не будет прежним после того как увидит наш сайт</p>
               <div>
@@ -82,7 +82,7 @@
             <li class="services-item">
               <h3 class="services-title">Приложения</h3>
               <div class="services-img">
-                <img src="img\service-2.png" width="300" height="146" alt="Приложения">
+                <img src="./img/service-2.png" width="300" height="146" alt="Приложения">
               </div>
               <p class="services-item-phrase">Покорить топ-10 приложений в AppStore и Google Play</p>
               <div>
@@ -92,7 +92,7 @@
             <li class="services-item">
               <h3 class="services-title">Презентации</h3>
               <div class="services-img">
-                <img src="img\service-3.png" width="300" height="146" alt="Презентации">
+                <img src="./img/service-3.png" width="300" height="146" alt="Презентации">
               </div>
               <p class="services-item-phrase">Вы даже не подозреваете, насколько мы изумительны!</p>
               <div>
@@ -123,7 +123,7 @@
         <div class="advantage-wrapper">    
           <h2 class="visually-hidden">Наши преимущества</h2>
           <div>
-            <img src="img\nerds-illustration.png" width="360" height="208" alt="Логотип">
+            <img src="./img/nerds-illustration.png" width="360" height="208" alt="Логотип">
           </div>
           <p class="advantage-phrase">С 2004 года любим точность во всем:</p>
           <div class="statistics-table">
@@ -148,10 +148,10 @@
       <div class="wrapper">
         <h2 class="visually-hidden">Клиенты</h2>
         <ul class="clients-list" >
-          <li class="clients-item"><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img\logo_htmlacademy.svg" width="199" height="57" alt="Интенсив «HTML и CSS. Профессиональная вёрстка сайтов"></a></li>
-          <li class="clients-item"><a href="#"><img src="img\logo-borodinski.png" width="209" height="90" alt="Барбершоп Бородинский"></a></li>
-          <li class="clients-item"><a href="#"><img src="img\logo-pink.png" width="185" height="52" alt="Pink"></a></li>
-          <li class="clients-item"><a href="#"><img src="img\logo-mishka.png" width="173" height="74" alt="Mishka"></a></li>
+          <li class="clients-item"><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="./img/logo_htmlacademy.svg" width="199" height="57" alt="Интенсив «HTML и CSS. Профессиональная вёрстка сайтов"></a></li>
+          <li class="clients-item"><a href="#"><img src="./img/logo-borodinski.png" width="209" height="90" alt="Барбершоп Бородинский"></a></li>
+          <li class="clients-item"><a href="#"><img src="./img/logo-pink.png" width="185" height="52" alt="Pink"></a></li>
+          <li class="clients-item"><a href="#"><img src="./img/logo-mishka.png" width="173" height="74" alt="Mishka"></a></li>
         </ul>
       </div>
     </section>
@@ -243,7 +243,7 @@
       <button class="button" type="submit">Отправить</button>
       <a class="modal-close button-hide" type="button" aria-label="Закрыть"></a>
   </section>
-  <script src="/js/script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 </html>
 
