--- a/catalog.html
+++ b/catalog.html
@@ -2,11 +2,11 @@
 <html class="page" lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>«Nёrds»</title>
-  <link rel="icon" href="favicon.ico">
+  <title>Nёrds</title>
+  <link rel="icon" href="./favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-  <link href="normalize.css" rel="stylesheet">
-  <link href="/css/style.css" rel="stylesheet">
+  <link href="./normalize.css" rel="stylesheet">
+  <link href="./css/style.css" rel="stylesheet">
 </head>
 <body class="page-body inner-page">
   <header class="main-header"><!--фон-->
@@ -14,15 +14,15 @@
     <div class="main-header-wrapper">
       <nav class="main-navigation"><!--контейнер по ширене header-->
         <div class="header-logo">
-          <a class="header-logo-img" href="index.html">
-            <img src="\img\nerds-logo.svg" width="159,87" height="65,02" alt="Нердс">
+          <a class="header-logo-img" href="./index.html">
+            <img src="./img/nerds-logo.svg" width="159,87" height="65,02" alt="Нердс">
           </a>
         </div>  
         <div class="site-navigation">
           <ul class="site-navigation-list">
             <li class="site-navigation-item"><a href="#">Студия</a></li>
             <li class="site-navigation-item"><a href="#clients">Клиенты</a></li>
-            <li class="site-navigation-item"><a href="catalog.html">Магазин</a></li>
+            <li class="site-navigation-item"><a href="./catalog.html">Магазин</a></li>
             <li class="site-navigation-item"><a href="#contacts">Контакты</a></li>            
           </ul>
           </div>
@@ -145,8 +145,8 @@
         <li class="catalog-item">
           <h3 class="visually-hidden">Sedona</h3>
           <div class="catalog-item-image">
-            <img class="catalog-item-browser" src="\img\shape.svg" width="360" height="40" alt="">
-            <img class="catalog-item-prod" src="\img\img-sedona.png" width="359" height="587" alt="Sedona">
+            <img class="catalog-item-browser" src="./img/shape.svg" width="360" height="40" alt="">
+            <img class="catalog-item-prod" src="./img/img-sedona.png" width="359" height="587" alt="Sedona">
           </div>
           <div class="catalog-item-info">
             <p class="catalog-item-title">Sedona</p>
@@ -157,8 +157,8 @@
         <li class="catalog-item">
           <h3 class="visually-hidden">Pink app</h3>
           <div class="catalog-item-image">
-            <img class="catalog-item-browser" src="\img\shape.svg" width="360" height="40" alt="">
-            <img class="catalog-item-prod" src="\img\img-pink.png" width="358" height="587" alt="Pink app">
+            <img class="catalog-item-browser" src="./img/shape.svg" width="360" height="40" alt="">
+            <img class="catalog-item-prod" src="./img/img-pink.png" width="358" height="587" alt="Pink app">
           </div>
           <div class="catalog-item-info">
             <p class="catalog-item-title">Pink app</p>
@@ -169,8 +169,8 @@
         <li class="catalog-item">
           <h3 class="visually-hidden">Barbershop</h3>
           <div class="catalog-item-image">
-            <img class="catalog-item-browser" src="\img\shape.svg" width="360" height="40" alt="">
-            <img class="catalog-item-prod" src="\img\img-barbershop.png" width="358" height="587" alt="Barbershop">
+            <img class="catalog-item-browser" src="./img/shape.svg" width="360" height="40" alt="">
+            <img class="catalog-item-prod" src="./img/img-barbershop.png" width="358" height="587" alt="Barbershop">
           </div>
           <div class="catalog-item-info">
             <p class="catalog-item-title">Barbershop</p>
@@ -181,8 +181,8 @@
         <li class="catalog-item">
           <h3 class="visually-hidden">Mishka</h3>
           <div class="catalog-item-image">
-            <img class="catalog-item-browser" src="\img\shape.svg" width="360" height="40" alt="">
-            <img class="catalog-item-prod" src="\img\img-mishka.png" width="358" height="587" alt="Mishka">
+            <img class="catalog-item-browser" src="./img/shape.svg" width="360" height="40" alt="">
+            <img class="catalog-item-prod" src="./img/img-mishka.png" width="358" height="587" alt="Mishka">
           </div>
           <div class="catalog-item-info">
             <p class="catalog-item-title">Mishka</p>
@@ -193,8 +193,8 @@
         <li class="catalog-item">
           <h3 class="visually-hidden">A plus</h3>
           <div class="catalog-item-image">
-            <img class="catalog-item-browser" src="\img\shape.svg" width="360" height="40" alt="">
-            <img class="catalog-item-prod" src="\img\img-aplus.png" width="358" height="587" alt="A plus">
+            <img class="catalog-item-browser" src="./img/shape.svg" width="360" height="40" alt="">
+            <img class="catalog-item-prod" src="./img/img-aplus.png" width="358" height="587" alt="A plus">
           </div>
           <div class="catalog-item-info">
             <p class="catalog-item-title">A plus</p>
@@ -205,8 +205,8 @@
         <li class="catalog-item">
           <h3 class="visually-hidden">Кваст</h3>
           <div class="catalog-item-image">
-            <img class="catalog-item-browser" src="\img\shape.svg" width="360" height="40" alt="">
-            <img class="catalog-item-prod" src="\img\img-kvast.png" width="358" height="587" alt="Кваст">
+            <img class="catalog-item-browser" src="./img/shape.svg" width="360" height="40" alt="">
+            <img class="catalog-item-prod" src="./img/img-kvast.png" width="358" height="587" alt="Кваст">
           </div>
           <div class="catalog-item-info">
             <p class="catalog-item-title">Кваст</p>
@@ -293,6 +293,6 @@
 </div>
 </div>     
 </footer>
-<script src="script.js"></script>
+<script src="./js/script.js"></script>
 </body>
 </html>
