--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Nёrds</title>
   <link rel="icon" href="./favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-  <link href="./normalize.css" rel="stylesheet">
+  <link href="normalize.css" rel="stylesheet">
   <link href="./css/style.css" rel="stylesheet">
 </head>
 <body class="page-body">
